# ivmone

./: .bumpversion.cfg  .gitmodules  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  appveyor.yml  circle.yml  codealike.json
cmake/: LibraryTools.cmake
cmake/Hunter/: config.cmake  init.cmake
docs/: efficient_gas_calculation_algorithm.md
include/evmone/: evmone.h
lib/: CMakeLists.txt
lib/evmone/: CMakeLists.txt  analysis.cpp  analysis.hpp  baseline.cpp  baseline.hpp  baseline_instruction_table.cpp  baseline_instruction_table.hpp  execution.cpp  execution.hpp  execution_state.hpp  instruction_traits.hpp  instructions.cpp  instructions.hpp  instructions_calls.cpp  instructions_op2fn.hpp  tracing.cpp  tracing.hpp  vm.cpp  vm.hpp
lib/ivmone/: CMakeLists.txt  analysis.cpp  analysis.hpp  baseline.hpp  baseline_instruction_table.cpp  baseline_instruction_table.hpp  execution.cpp  execution_state.hpp  instruction_traits.hpp  instructions.cpp  instructions_op2fn.hpp  limits.hpp  opcodes_helpers.h  tracing.cpp
test/: CMakeLists.txt
test/bench/: CMakeLists.txt  bench.cpp  helpers.hpp  synthetic_benchmarks.cpp  synthetic_benchmarks.hpp
test/fuzzer/: CMakeLists.txt  README.md  fuzzer.cpp
test/integration/: CMakeLists.txt
test/internal_benchmarks/: CMakeLists.txt  find_jumpdest_bench.cpp  memory_allocation.cpp  realloc_behavior.cpp
test/unittests/: CMakeLists.txt  analysis_test.cpp  bytecode_test.cpp  evm_benchmark_test.cpp  evm_calls_test.cpp  evm_eip2929_test.cpp  evm_eip3198_basefee_test.cpp  evm_fixture.cpp  evm_fixture.hpp  evm_other_test.cpp  evm_state_test.cpp  evm_test.cpp  evmone_test.cpp  execution_state_test.cpp  instructions_test.cpp  main.cpp  tracing_test.cpp  utils_test.cpp
test/utils/: CMakeLists.txt  bytecode.hpp  dump.cpp  dump.hpp  utils.cpp  utils.hpp
